# DedupFS

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
dedupfs/: main.py
dedupfs/api/: app.py
dedupfs/api/routes/: duplicates.py  health.py  jobs.py  maintenance.py  thumbs.py  ui.py
dedupfs/api/schemas/: duplicates.py  jobs.py  maintenance.py  thumbs.py
dedupfs/core/: config.py  path_safety.py
dedupfs/db/: init_db.py  migrations.py  models.py  session.py
dedupfs/duplicates/: __init__.py  service.py  types.py
dedupfs/jobs/: lock_service.py  service.py  types.py
dedupfs/maintenance/: __init__.py  service.py  types.py
dedupfs/thumbs/: __init__.py  service.py  types.py
dedupfs/ui/: app.js  index.html  styles.css
dedupfs/worker/: __init__.py  pipeline.py
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  PROTOCOL.md  PROTOCOL.zh-CN.md
rust-worker/: Cargo.toml  README.md  worker.example.toml
rust-worker/src/: config.rs  db.rs  hash.rs  main.rs  path_safety.rs  scan.rs  thumbnail.rs
scripts/: benchmark_duplicates.py  benchmark_thumbnail_queue.py  profile_ui_duplicates.py
tests/: test_db_migrations.py  test_duplicates.py  test_duplicates_query_plan.py  test_job_contention.py  test_job_policy.py  test_path_safety.py  test_thumbnail_worker_container_e2e.py  test_thumbnails.py  test_ui.py  test_wal_maintenance.py
